# workers

./: .gitignore  .gitmodules  AGENTS-NEW-WORKER.md  Cargo.toml  README.md  TODOS.md  biome.json  lsp_brainstorm.md  ruff.toml  worker-readme.md
a2a/: Cargo.toml  README.md  iii.worker.yaml
a2a-client/: Cargo.toml  README.md  iii.worker.yaml
a2a-client/src/: lib.rs  main.rs  registration.rs  session.rs  task.rs  types.rs
a2a-client/tests/: roundtrip.rs
a2a/examples/: default-secure-auth.rs
a2a/src/: handler.rs  lib.rs  main.rs  streaming.rs  types.rs
a2a/tests/: agent_card.rs  protocol_loop_guard.rs  streaming.rs
acp/: Cargo.toml  README.md  iii.worker.yaml
acp/src/: handler.rs  lib.rs  main.rs  session.rs  transport.rs  types.rs
acp/tests/: protocol.rs
auth-credentials/: Cargo.toml  README.md  iii.worker.yaml
auth-credentials/crates/auth-credentials/: Cargo.toml
auth-credentials/src/: lib.rs  main.rs
auth-credentials/tests/: integration.rs
auth-rbac/crates/auth-rbac/: Cargo.toml
coding/: Cargo.toml  README.md  SPEC.md  config.yaml  iii.worker.yaml
coding/src/: config.rs  main.rs  manifest.rs  templates.rs
coding/src/functions/: deploy.rs  execute.rs  generate_function.rs  generate_trigger.rs  mod.rs  scaffold.rs  test.rs
conductor/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  iii.worker.yaml  package.json
conductor/src/: agents.rs  agents.ts  dispatch.rs  dispatch.ts  gates.rs  gates.ts  git.rs  git.ts  iii.ts  index.ts  lib.rs  main.rs  state.rs  state.ts  types.rs  types.ts
conductor/tests/: dispatch.test.ts  gates.test.ts  merge.rs
context-compaction/crates/models-catalog/: Cargo.toml
document-extract/crates/document-extract/: Cargo.toml
guardrails/crates/guardrails/: Cargo.toml
iii-aura/python-worker/: pyproject.toml
iii-database/: Cargo.toml  README.md  config.yaml.example  iii.worker.yaml
iii-database/src/: handle.rs  lib.rs  main.rs  value.rs
iii-database/src/driver/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
iii-database/src/handlers/: execute.rs  mod.rs  prepare.rs  query.rs  run_statement.rs  transaction.rs
iii-database/src/pool/: mod.rs  sqlite.rs  tls.rs
iii-database/src/triggers/: handler.rs  mod.rs  query_poll.rs
iii-database/tests/: integration.rs  value_coercion.rs
iii-database/tests/e2e/: .gitignore  README.md  docker-compose.yml  run-tests.sh
iii-lsp/: Cargo.toml  README.md  iii.worker.yaml  openvsx-verification.txt
iii-lsp/src/: analyzer.rs  completions.rs  diagnostics.rs  engine_client.rs  hover.rs  main.rs
image-resize/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml  iii.toml  iii.worker.yaml
image-resize/example/: .gitignore  README.md  config.yaml  iii.toml  iii.worker.yaml  iii.workers.yaml  package-lock.json  package.json  pnpm-lock.yaml
image-resize/example-python/: .gitignore  iii.worker.yaml  pyproject.toml  requirements.txt
image-resize/example-python/image_resize_demo/: __main__.py
image-resize/example-python/src/: main.py
image-resize/example-rust/: Cargo.toml  iii.worker.yaml
image-resize/example-rust/src/: main.rs
image-resize/example/src/: hooks.ts  iii.ts  index.ts
image-resize/example/web/: index.html
image-resize/src/: config.rs  conversion.rs  handler.rs  main.rs  manifest.rs  processing.rs
image-resize/tests/: integration.rs
introspect/: Cargo.toml  README.md  SPEC.md  config.yaml  iii.worker.yaml
introspect/src/: config.rs  main.rs  manifest.rs
introspect/src/functions/: diagram.rs  explain.rs  functions.rs  health.rs  mod.rs  state.rs  topology.rs  trace.rs  triggers.rs  workers.rs
introspect/tests/: manifest.rs
llm-budget/crates/llm-budget/: Cargo.toml
llm-router/: Cargo.toml  README.md  SPEC.md  config.yaml  iii.worker.yaml
llm-router/src/: config.rs  main.rs  manifest.rs  router.rs  state.rs  types.rs
llm-router/src/functions/: ab.rs  classify.rs  decide.rs  health.rs  mod.rs  model.rs  policy.rs  stats.rs
llm-router/tests/: routing_request_envelope.rs
mcp/: Cargo.toml  README.md  config.yaml  iii.worker.yaml
mcp-client/: Cargo.toml  README.md  iii.worker.yaml
mcp-client/src/: lib.rs  main.rs  registration.rs  session.rs  transport.rs  types.rs
mcp-client/tests/: roundtrip.rs
mcp/examples/: default-secure-auth.rs
mcp/src/: config.rs  handler.rs  lib.rs  main.rs  manifest.rs  prompts.rs  protocol.rs  spec.rs  transport.rs  worker_manager.rs
mcp/src/functions/: handler.rs  mod.rs
mcp/tests/: bdd.rs  cli.rs  manifest.rs  protocol_loop_guard.rs  spec_2a.rs
mcp/tests/common/: engine.rs  mod.rs  workers.rs  world.rs
mcp/tests/features/: core.feature  prompts.feature  resources.feature  tools.feature
mcp/tests/steps/: core.rs  mod.rs  prompts.rs  resources.rs  tools.rs
nanochat/: README.md  pyproject.toml  worker.py
oauth-anthropic/crates/auth-credentials/: Cargo.toml
policy-denylist/: Cargo.toml  README.md  iii.worker.yaml
policy-denylist/src/: lib.rs  main.rs
policy-denylist/tests/: integration.rs
provider-google-vertex/crates/overflow-classify/: Cargo.toml
sandbox-docker/: Cargo.toml  config.yaml
sandbox-docker/src/: config.rs  docker.rs  main.rs  manifest.rs  types.rs
sandbox-docker/src/functions/: exec.rs  fs.rs  mod.rs  sandbox.rs
sandbox-firecracker/: Cargo.toml  config.yaml
sandbox-firecracker/src/: config.rs  exec.rs  main.rs  manifest.rs  types.rs
sandbox-firecracker/src/functions/: exec.rs  mod.rs  sandbox.rs
sandbox-firecracker/src/kvm/: cpu.rs  fork.rs  mod.rs  serial.rs  template.rs  vmstate.rs
shell/: Cargo.toml  README.md  build.rs  config.yaml  iii.worker.yaml
shell/src/: config.rs  exec.rs  jobs.rs  main.rs  manifest.rs
shell/src/functions/: exec.rs  exec_bg.rs  kill.rs  list.rs  mod.rs  status.rs
skills/: Cargo.toml  README.md  config.yaml  iii.worker.yaml
skills/src/: config.rs  lib.rs  main.rs  manifest.rs  state.rs  trigger_types.rs
skills/src/functions/: mod.rs  (+2 more)
skills/tests/: bdd.rs
todo-worker-python/: Dockerfile  Makefile  README.md  iii.worker.yaml  pyproject.toml
todo-worker-python/src/: handlers.py  hooks.py  main.py  store.py
(+610 files in other folders)
