[workspace]

[package]
name = "iii-acp"
version = "0.1.0"
edition = "2024"
description = "Agent Client Protocol worker for iii-engine"
license = "Apache-2.0"
authors = ["Rohit Ghumare <ghumare64@gmail.com>"]
repository = "https://github.com/iii-hq/workers"
homepage = "https://github.com/iii-hq/workers"
rust-version = "1.85"
keywords = ["acp", "agent-client-protocol", "ai", "iii-engine"]
categories = ["command-line-utilities"]
publish = false

[lib]
name = "iii_acp"
path = "src/lib.rs"

[[bin]]
name = "iii-acp"
path = "src/main.rs"

[dependencies]
iii-sdk = "=0.11.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

[dev-dependencies]
serde_json = "1"
