[workspace]
resolver = "2"
members = ["crates/auth-credentials", "crates/harness-types"]

[package]
name = "iii-auth-credentials"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iii-hq/workers"
authors = ["iii contributors"]
publish = false

[[bin]]
name = "iii-auth-credentials"
path = "src/main.rs"

[dependencies]
auth-credentials = { path = "crates/auth-credentials" }
iii-sdk = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/iii-hq/workers"
authors = ["iii contributors"]

[workspace.dependencies]
iii-sdk = "=0.11.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
bytes = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_const_for_fn = "allow"
derive_partial_eq_without_eq = "allow"
unreadable_literal = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
manual_let_else = "allow"
collapsible_if = "allow"
drain_collect = "allow"
manual_map = "allow"
useless_let_if_seq = "allow"
needless_continue = "allow"
items_after_statements = "allow"
too_many_lines = "allow"
unused_self = "allow"
single_call_fn = "allow"
inefficient_to_string = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
or_fun_call = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
needless_collect = "allow"
case_sensitive_file_extension_comparisons = "allow"
significant_drop_in_scrutinee = "allow"
redundant_pub_crate = "allow"
ignored_unit_patterns = "allow"
manual_string_new = "allow"
redundant_else = "allow"
cognitive_complexity = "allow"
branches_sharing_code = "allow"
unnecessary_lazy_evaluations = "allow"
non_std_lazy_statics = "allow"
ignore_without_reason = "allow"
struct_field_names = "allow"
naive_bytecount = "allow"
suspicious_arithmetic_impl = "allow"
return_self_not_must_use = "allow"
needless_pass_by_ref_mut = "allow"
ref_option = "allow"
mut_mut = "allow"
should_implement_trait = "allow"
default_trait_access = "allow"
cloned_instead_of_copied = "allow"
implicit_clone = "allow"
use_self = "allow"
derivable_impls = "allow"
redundant_clone = "allow"
unnecessary_map_or = "allow"
double_ended_iterator_last = "allow"
format_push_string = "allow"
uninlined_format_args = "allow"
too_long_first_doc_paragraph = "allow"
map_unwrap_or = "allow"
