[workspace]

[package]
name = "iii-coding"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iii-coding"
path = "src/main.rs"

[dependencies]
iii-sdk = "0.11.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
