[package]
name = "iii-conductor"
version = "0.1.0"
edition = "2021"
description = "Multi-agent fan-out + verifier-gated merge worker for iii-engine"
license = "Apache-2.0"
authors = ["Rohit Ghumare <ghumare64@gmail.com>"]
repository = "https://github.com/iii-hq/workers"
homepage = "https://github.com/iii-hq/workers"
rust-version = "1.85"
keywords = ["iii-engine", "agents", "orchestration", "ai", "worker"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "iii-conductor"
path = "src/main.rs"

[lib]
name = "iii_conductor"
path = "src/lib.rs"

[dependencies]
iii-sdk = "=0.11.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time", "process", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
