[workspace]

[package]
name = "iii-introspect"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iii-introspect"
path = "src/main.rs"

[dependencies]
iii-sdk = { version = "0.10.0", features = ["otel"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
