[workspace]

[package]
name = "iii-llm-router"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "iii-llm-router"
path = "src/main.rs"

[dependencies]
iii-sdk = "=0.11.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
