[workspace]

[package]
name = "iii-mcp-client"
version = "0.1.2"
edition = "2021"
publish = false

[lib]
name = "iii_mcp_client"
path = "src/lib.rs"

[[bin]]
name = "iii-mcp-client"
path = "src/main.rs"

[dependencies]
iii-sdk = "=0.11.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "process", "io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6"
futures-util = "0.3"

[dev-dependencies]
serde_json = "1"
