[workspace]

[package]
name = "mcp"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mcp"
path = "src/main.rs"

[lib]
name = "iii_mcp"
path = "src/lib.rs"

[dependencies]
iii-sdk = "=0.11.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

[dev-dependencies]
serde_json = "1"
cucumber = "0.22"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }

# Single BDD entry point. cucumber needs full control of the runner, so
# `harness = false` is required. All .feature files under
# `tests/features/**` are discovered at runtime; tags (`@pure`, `@engine`,
# `@core`, `@tools`, `@resources`, `@prompts`) let you filter to a subset:
#
#   cargo test --test bdd                  # everything
#   cargo test --test bdd -- --tags @pure  # no engine required
#   cargo test --test bdd -- --tags @tools
[[test]]
name = "bdd"
harness = false
