[project]
name = "iii-nanochat"
version = "0.1.0"
description = "nanochat LLM worker for iii-engine — train, fine-tune, evaluate, and chat with GPT models"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "iii-sdk>=0.10.0",
    "torch>=2.0",
    "pydantic>=2.0",
    "tiktoken",
    "tokenizers",
    "datasets",
    "pyarrow",
    "psutil",
]

[project.optional-dependencies]
train = ["wandb"]

[project.scripts]
iii-nanochat = "worker:main"
