[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iii-nanochat"
version = "0.1.0"
description = "nanochat LLM worker for iii-engine"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "iii-sdk==0.11.3",
    "torch>=2.0",
    "pydantic>=2.0",
    "tiktoken",
    "tokenizers",
    "datasets",
    "pyarrow",
    "psutil",
]

[project.optional-dependencies]
train = ["wandb"]

[project.scripts]
iii-nanochat = "worker:main"

# Ship the worker as a top-level module (worker.py) rather than a package —
# `nanochat/` is the repo directory, not a Python package. nanochat-upstream/
# is intentionally excluded; it's a vendored checkout, not part of this dist.
[tool.setuptools]
py-modules = ["worker"]
