[workspace]

[package]
name = "sandbox-firecracker"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sandbox-firecracker"
path = "src/main.rs"

[dependencies]
iii-sdk = { version = "0.9.0", features = ["otel"] }
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }
vmm-sys-util = "0.12"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
subtle = "2"
clap = { version = "4", features = ["derive"] }
