[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-worker"
version = "0.1.0"
description = "III SDK Python Todo Worker"
authors = [{ name = "III" }]
requires-python = ">=3.10"
dependencies = [
    "iii-sdk",
    "opentelemetry-api",
    "opentelemetry-sdk",
]

[project.scripts]
todo-worker = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
