[package]
name = "auth-rbac"
description = "HMAC API keys + workspace roles (owner/admin/member/viewer). Distinct from auth-credentials, which stores provider tokens. Graduated from roster/workers/auth."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
iii-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
