[package]
name = "models-catalog"
description = "Model capabilities knowledge base. Loaded from embedded JSON; supports list / get / supports queries."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
iii-sdk = { workspace = true }
anyhow = { workspace = true }
