[package]
name = "document-extract"
description = "Extract text from PDF and Word documents into harness ContentBlocks. Used by tools like document::extract to ingest user-uploaded files for context."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
harness-types = { path = "../harness-types" }
iii-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
pdf-extract = "0.7"
docx-rs = "0.4"
infer = "0.16"
