[package]
name = "guardrails"
description = "Local heuristics for PII, leaked API keys, jailbreak keywords, and toxicity. Graduated from roster/workers/guardrails."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
iii-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
